--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rohitgeddam.github.io/community-site-client",
+  "homepage": "http://DSCBITDurg.github.io/community-site-client",
   "name": "client",
   "version": "0.1.0",
   "private": true,
