--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
+    "formik": "^2.1.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0"
