Contact Form Added

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "animate.css": "^4.1.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "node": "^14.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
